# Open3D

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  KernelDesign.h  TTriangleMeshDesign.h  TriangleMeshDesign.h  pc1.npy  pc2.npy  semantic-segmentation.py  t_trianglemesh.py  tensor.ipynb  tensor.py  test_leak.py  test_ports.sh  turnserver.conf  turnusers.txt
.github/workflows/: Dockerfile.openblas
cmake/: Open3DFetchISPCCompiler.cmake  Open3DISPC.cmake  Open3DMakeISPCInstructionSets.cmake  Open3DSetGlobalProperties.cmake
cpp/apps/: CMakeLists.txt
cpp/open3d/: CMakeLists.txt  Open3D.h.in
cpp/open3d/t/pipelines/: CMakeLists.txt
cpp/open3d/t/pipelines/color_map/: ColorMapUtils.cpp  ColorMapUtils.h  ImageWarpingField.cpp  ImageWarpingField.h  NonRigidOptimizer.cpp  NonRigidOptimizer.h  RigidOptimizer.cpp  RigidOptimizer.h
cpp/open3d/t/pipelines/kernel/: ComputeTransform.cpp  ComputeTransform.h  ComputeTransformCPU.cpp  ComputeTransformCUDA.cu  ComputeTransformImpl.h  FillInLinearSystemImpl.h  RGBDOdometryCPU.cpp  SVD3x3CPU.h  SVD3x3CUDA.cuh  TransformationConverter.cpp
cpp/open3d/t/pipelines/registration/: Registration.cpp  Registration.h  TransformationEstimation.cpp  TransformationEstimation.h
cpp/pybind/: generate_torch_ops_wrapper.py
demo/: Dockerfile
docker/1804/: Dockerfile
docker/2004/: Dockerfile
docker/2004_filament_source/: Dockerfile
docs/: index.rst  make_docs.py
notebooks/: ipywebrtc.ipynb
pointpillars/: res.npy  res_coors.npy  res_num_points.npy  res_voxels.npy  test_ops.py
python/: setup.py
util/: ci_utils.sh
(+187 files in other folders)
